name:          haskhol-core
version:       1.2.0
synopsis:      The core logical system of HaskHOL, an EDSL for HOL theorem 
               proving. 
description:   More details can be found at the following page:  
               http:\/\/haskhol.org. 
license:       BSD3
license-file:  LICENSE
author:        Evan Austin <e.c.austin@gmail.com>
maintainer:    Evan Austin <e.c.austin@gmail.com>
category:      Theorem Provers
cabal-version: >=1.22
build-type:    Simple
stability:     experimental
homepage:      http://haskhol.org
 
data-dir: data
data-files: .dummy

library
    default-language:  Haskell2010
    default-extensions:  DeriveDataTypeable, OverloadedStrings,
                         QuasiQuotes, TemplateHaskell
    build-depends:   base >= 4.8 && < 4.9
                   , ghc-prim >= 0.3
                   , template-haskell >= 2.9
                   , acid-state >= 0.12
                   , containers >= 0.5
                   , deepseq >= 1.3
                   , exceptions >= 0.8
                   , filepath >= 1.3
                   , hashable >= 1.2
                   , hint >= 0.4
                   , lens >= 4.1
                   , mtl >= 2.1
                   , parsec >= 3.1
                   , safecopy >= 0.8.6
                   , system-filepath >= 0.4
                   , shelly >= 1.5
                   , text >= 1.2
                   , text-show >= 0.6
                   , th-lift >= 0.7
                   , th-lift-instances >= 0.1.6
                   , transformers >= 0.4
                   , unordered-containers >= 0.2
                   , wl-pprint-extras >= 3.5
                   , wl-pprint-terminfo >= 3.7

    exposed-modules:
      HaskHOL.Core
      HaskHOL.Core.Basics
      HaskHOL.Core.Lib     
      HaskHOL.Core.Lib.Families
      HaskHOL.Core.Kernel  
      HaskHOL.Core.Kernel.Terms
      HaskHOL.Core.Kernel.Types 
      HaskHOL.Core.State   
      HaskHOL.Core.State.Monad
      HaskHOL.Core.Parser  
      HaskHOL.Core.Printer
      HaskHOL.Core.Ext	
      HaskHOL.Core.Overloadings

    exposed: True
    buildable: True
    hs-source-dirs: src

    other-modules:
      HaskHOL.Core.Basics.Nets
      HaskHOL.Core.Ext.Protected    
      HaskHOL.Core.Ext.QQ
      HaskHOL.Core.Kernel.Prims
      HaskHOL.Core.Parser.Elab
      HaskHOL.Core.Parser.Lib 
      HaskHOL.Core.Parser.Prims 
      HaskHOL.Core.Parser.Rep 
      HaskHOL.Core.Parser.TermParser   
      HaskHOL.Core.Parser.TypeParser  
      HaskHOL.Core.Printer.Prims
      Paths_haskhol_core    
             
    ghc-prof-options: -O2 -funbox-strict-fields -Wall -fprof-auto
                      -fno-warn-duplicate-constraints
    ghc-options: -O2 -funbox-strict-fields -Wall -fno-warn-duplicate-constraints

source-repository head
  type: git 
  location: git://github.com/ecaustin/haskhol-core.git
