name:          haskhol-core
version:       1.3.0
synopsis:      The core logical system of HaskHOL, an EDSL for HOL theorem 
               proving. 
description:   More details can be found at the following page:  
               http:\/\/haskhol.org. 
license:       BSD3
license-file:  LICENSE
author:        Evan Austin <e.c.austin@gmail.com>
maintainer:    Evan Austin <e.c.austin@gmail.com>
category:      Theorem Provers
cabal-version: >=1.22
build-type:    Simple
stability:     experimental
homepage:      http://haskhol.org
 
data-dir: data
data-files: .dummy

library
    default-language:  Haskell2010
    default-extensions:  DeriveDataTypeable, OverloadedStrings,
                         PatternSynonyms, QuasiQuotes, TemplateHaskell
    build-depends:   base >= 4.9 && < 5.0
                   , ghc-prim >= 0.5
                   , template-haskell >= 2.11
                   , acid-state >= 0.14
                   , ansi-wl-pprint >= 0.6
                   , containers >= 0.5
                   , deepseq >= 1.4
                   , exceptions >= 0.8
                   , filepath >= 1.4
                   , hashable >= 1.2
                   , hint >= 0.6
                   , lens >= 4.14
                   , mtl >= 2.2
                   , parsec >= 3.1
                   , safecopy >= 0.9
                   , system-filepath >= 0.4
                   , shelly >= 1.6
                   , text >= 1.2
                   , text-show >= 3.2
                   , th-lift-instances >= 0.1.8
                   , transformers >= 0.4
                   , unordered-containers >= 0.2

    exposed-modules:
      HaskHOL.Core
      HaskHOL.Core.Basics
      HaskHOL.Core.Lib     
      HaskHOL.Core.Lib.Families
      HaskHOL.Core.Kernel  
      HaskHOL.Core.Kernel.Terms
      HaskHOL.Core.Kernel.Types 
      HaskHOL.Core.State   
      HaskHOL.Core.State.Monad
      HaskHOL.Core.Parser  
      HaskHOL.Core.Printer
      HaskHOL.Core.Ext	
      HaskHOL.Core.Overloadings

    exposed: True
    buildable: True
    hs-source-dirs: src

    other-modules:
      HaskHOL.Core.Basics.Nets
      HaskHOL.Core.Basics.Stateful
      HaskHOL.Core.Ext.Protected    
      HaskHOL.Core.Ext.QQ
      HaskHOL.Core.Kernel.Prims
      HaskHOL.Core.Parser.Elab
      HaskHOL.Core.Parser.Lib 
      HaskHOL.Core.Parser.Rep 
      HaskHOL.Core.Parser.TermParser   
      HaskHOL.Core.Parser.TypeParser
      Paths_haskhol_core    
             
    ghc-prof-options: -O2 -funbox-strict-fields -Wall -fprof-auto
    ghc-options: -O2 -funbox-strict-fields -Wall

source-repository head
  type: git 
  location: git://github.com/ecaustin/haskhol-core.git
